--- a/index.html
+++ b/index.html
@@ -610,15 +610,15 @@
             <span class="n-icon"></span>
             <h4 class="mb-0 font-weight-bold">IN THE MAGAZINE</h4>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="image-wrapper">
               <img class="mag-poster" src="images/mag-image.jpg" alt="Card image cap">
               <p class="text-bottom m-0 font-weight-bold">MAY 01 ISSUE</p>
             </div>
             <button type="button" class="btn btn-block btn-secondary text-dark">SEE ALL FEATURES</button>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 cover-image">
-            <div class="mag-wrap"><img class="mag-img" src="images/mag-image2.jpg" alt="Card image cap">
+          <div class="col-12 col-md-6 col-lg-3 cover-image maga-title">
+            <div class="mag-wrap"><img class="mag-img" src="images/class.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
               <span class="cover">Cover</span><span><a class="text-decoration-none" href="#">Politics</a></span>
@@ -626,7 +626,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Most Americans Believe
                 Voters Should Be Able to Mail in Ballots: Poll</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image3.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -635,7 +635,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Michigan Governor Gretchen
                 Whitmer Talks Trump, VP Rumors And More</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image4.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -644,7 +644,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">How Doctors are Saving
                 Coronavirus Patients with Innovative New Techniques</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1">
+          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image5.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -653,7 +653,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Exclusive: How FEMA Missed a
                 Chance to Prepare for Coronavirus Pandemic</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1">
+          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image6.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -662,7 +662,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Ten Surprising Things We
                 Learned from the Michael Jordan ESPN Documentary</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1">
+          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image7.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -671,7 +671,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">10 Books That Will Transport
                 You All Around the World</a></h5>
           </div>
-          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1">
+          <div class="col-12 col-md-6 col-lg-3 mt-3 p-1 maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/mag-image8.jpg" alt="Card image cap">
             </div>
             <div class="cover-sec">
@@ -687,7 +687,7 @@
             <span class="n-icon"></span>
             <h4 class="mb-0 font-weight-bold">EDITOR'S PICK</h4>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583902/grocery-shopping-during-coronavirus-pandemic.jpg?w=397&h=295&f=d9e18d18477492273e4339380ab126b0"
@@ -699,7 +699,7 @@
             <p class="card-text">Nebraska small business owner Nemat Azizi helps out-of-work restaurant and salon
               workers with free $150 grocery vouchers.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583723/prison.jpg?w=397&h=295&f=e9f728d5878d2e7f2fa202ad2a2083e7"
@@ -711,7 +711,7 @@
             <p class="card-text">"Every day that goes by without action means more people will die," the ACLU has
               warned.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583698/food-bank.jpg?w=397&h=295&l=0&t=0&f=1ce73f8f83590f5c54cfed34e0f60152"
@@ -723,7 +723,7 @@
             <p class="card-text">Toi Cudworth donated $950 to the San Antonio Food Bank and also bought groceries for a
               neighbor who was recently laid off.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583668/istock-world-book-day-2020.jpg?w=397&h=295&f=9e8298958f31fff8b5092253f66c83b1"
@@ -734,7 +734,7 @@
                 and Events to Help Celebrate at Home</a></h5>
             <p class="card-text">Curl up with a coffee and dig into a good book.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title pt-3">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583258/shakespeare-lockdown-movies-theatre-family.jpg?w=397&h=295&f=5b18763b1a6297b273e12d4eb794b772"
@@ -746,7 +746,7 @@
             <p class="card-text">Neve played Hamlet in her black hoodie, and we used her cuddly toys for the other
               characters.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title pt-3">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583555/covid19-coronavirus-conjunctivitis-getty-stock.jpg?w=397&h=295&f=8e26bcb70caf8a68460a053486f42980"
@@ -757,7 +757,7 @@
                 Woman's Eyes for 20 Days</a></h5>
             <p class="card-text">Conjunctivitis is thought to be a symptom of COVID-19.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title pt-3">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583746/unamaki-ocearch.jpg?w=397&h=295&f=337b99f185c722caf5acf7423aca5079"
@@ -769,7 +769,7 @@
             <p class="card-text">The shark was tagged by marine research non-profit OCEARCH in the waters off Cape
               Breton, Nova Scotia, Canada.</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-3">
+          <div class="col-12 col-md-6 col-lg-3 maga-title pt-3">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583616/mark-zuckerberg.jpg?w=397&h=295&l=0&t=0&f=ea2e8c5755fa83dcc4aaf995ea8c4329"
@@ -787,7 +787,7 @@
       <div class="container-fluid border-top border-bottom mt-3">
         <div class="row">
           <h5 class="below-heading w-100">U.S.</h5>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583903/wedge-shaped-tornado.jpg?w=397&h=265&f=02c070ca62df6e3435e62d0e8f4d3fc6"
@@ -796,7 +796,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Texas Tornado Pictures Show
                 Severe Damage to Parts of Onalaska, Polk County</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1568246/powerball-lottery-tickets.jpg?w=397&h=265&f=5d3293477c47633dbc96ecb178cd1f95"
@@ -845,7 +845,7 @@
       <div class="container-fluid border-bottom mt-3">
         <div class="row">
           <h5 class="below-heading w-100">World</h5>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583890/vancouver-suspect.png?w=397&h=265&f=a4d650d0e353dd3023cb667e11d4c6ee"
@@ -854,7 +854,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Police Hunt Suspect Who
                 Attacked Elderly Asian Man With Dementia</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583719/family-holds-signs-protesting-coronavirus-lockdown.jpg?w=397&h=265&f=ac9d22d8a1fa6dc960bc086ece9a3aaa"
@@ -903,7 +903,7 @@
       <div class="container-fluid border-bottom mt-3">
         <div class="row">
           <h5 class="below-heading w-100">Business</h5>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583761/small-business-administration-white-house-discussion.jpg?w=397&h=265&f=1b78927bc877b6373f30589a36ec84b3"
@@ -912,7 +912,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">Fogo de Chão To Receive $20
                 Million In Small Business Loan</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583237/us-wti-oil-price-drop-low-may.jpg?w=397&h=265&f=31920f01fde4b4f7295e1bef19ae0e09"
@@ -961,7 +961,7 @@
       <div class="container-fluid border-bottom mt-3">
         <div class="row">
           <h5 class="below-heading w-100">Tech & Science</h5>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583884/playstation-logo.jpg?w=397&h=265&f=66d2db82b9b6e7061d2552500dd53cf9"
@@ -970,7 +970,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">PSN Down? PlayStation Outage
                 Hits Games, Applications and Online Features</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583713/earth-day-event-against-climate-change-gwanghwamun-square.jpg?w=397&h=265&f=69b922f901187843c2a643b02ca37a2b"
@@ -1019,7 +1019,7 @@
       <div class="container-fluid border-bottom mt-3">
         <div class="row">
           <h5 class="below-heading w-100">Culture</h5>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583923/little-fires-everywhere-ending.jpg?w=397&h=265&f=656a361dffc0659d3268e00af762c85e"
@@ -1028,7 +1028,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">'Little Fires Everywhere'
                 Ending Explained: What Happened at the End?</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1573763/westworld-season-2-dolores.jpg?w=397&h=265&f=9fa777073c31a810e986e901b6a9b514"
@@ -1077,7 +1077,7 @@
       <div class="container-fluid border-bottom mt-3">
         <div class="row">
           <h4 class="below-heading w-100">Sports</h4>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583896/nfl-draft-betting.jpg?w=397&h=265&f=455a9f4f814d6f6e42a638888b416208"
@@ -1086,7 +1086,7 @@
             <h5 class="font-weight-bold"><a class="text-decoration-none text-cont" href="#">NFL Draft 2020 Expected to
                 Shatter Betting Records</a></h5>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 in-below">
             <div class="image-wrapper">
               <img class="mag-poster"
                 src="https://d.newsweek.com/en/full/1583889/peyton-manning-tiger-woods.jpg?w=397&h=265&f=f24b61b2f5f054d7e4d296fd5427197f"
@@ -1133,9 +1133,9 @@
       </div>
       <div class="container-fluid mt-3 border-bottom">
         <div class="row ">
-          <div class="col-12 col-lg-8">
-            <h5 class="font-weight-bold below-heading">Suscribe</h5>
-            <div class="mag-text-img p-4">
+          <div class="col-12 col-lg-8 pb-4">
+            <h5 class="font-weight-bold below-heading">SUSCRIBE</h5>
+            <div class="mag-text-img p-5">
               <div class="image-wrapper mr-5">
                 <img
                   src="https://d.newsweek.com/en/full/1579878/april-17-24-2020-cover.jpg?w=170&q=95&f=b4884b3be2e05e586232cc3f3d569aa8"
@@ -1155,7 +1155,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 pb-4">
             <h5 class="font-weight-bold below-heading">NEWSLETTER</h5>
             <div class="new-cont border rounded-0">
               <div class="image-wrap1">
@@ -1194,30 +1194,30 @@
           </div>
           <div class="col-12 row mt-3 ml-1">
             <span class=" mr-3 mb-2 font-weight-bold">Editions:</span>
-            <ul class="d-flex flex-wrap footer-list p-0 mb-2 list-inline">
+            <ul class="d-flex flex-wrap footer-list p-0 mb-2 list-inline foot-all">
               <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted">U.S. Edition</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted">日本</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted">Pakistan</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted">Polska</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">日本</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">Pakistan</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">Polska</a></li>
               <li ><a href="#" class="mr-3 footer-link text-muted px-2 pb-2">Romania</a></li>
             </ul>
-            <ul class="d-flex flex-wrap footer-list p-0 mb-2 list-inline">
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted ">About Us</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted ">Corrections</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted ">Contact Us</a></li>
+            <ul class="d-flex flex-wrap footer-list p-0 mb-2 list-inline foot-all">
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">About Us</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">Corrections</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">Contact Us</a></li>
               <li class="border-right px-2 pb-2">
-                <a href="#" class=" footer-link text-muted px-2 mb-2">Editorial Guidelines</a>
+                <a href="#" class=" footer-link px-2 mb-2">Editorial Guidelines</a>
               </li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted ">Copyright</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link">Copyright</a></li>
               <li class="border-right px-2 pb-2">
-                <a href="#" class="mr-3 footer-link text-muted ">Terms &amp; Conditions</a>
+                <a href="#" class="mr-3 footer-link ">Terms &amp; Conditions</a>
               </li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted px-2 pb-2"> Privacy Policy</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted px-2 pb-2">Cookie Policy</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted px-2 pb-2">Terms of Sale</a></li>
-              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted px-2 pb-2">Announcements</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link px-2 pb-2"> Privacy Policy</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link px-2 pb-2">Cookie Policy</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link px-2 pb-2">Terms of Sale</a></li>
+              <li class="border-right px-2 pb-2"><a href="#" class=" footer-link px-2 pb-2">Announcements</a></li>
               <li class="px-2 pb-2">
-                <a href="#" class=" footer-link text-muted ">Consent preferences</a>
+                <a href="#" class=" footer-link ">Consent preferences</a>
               </li>
             </ul>
           </div>
