Removed json file

--- a/index.html
+++ b/index.html
@@ -485,10 +485,69 @@
                 </p>
               </div>
             </div>
-
-            <!-- Sec-->
+            <div class="debate row">
+              <h5 class="section-title col-12 text-muted">THE DEBATE</h5>
+              <div class="col-12  ">
+                <div class="position-relative debator-wrapper">
+                <div class="debate-1 d-flex align-items-center">
+                  <img alt="Trump"
+                       class="opinion-img"
+                       data-src="https://d.newsweek.com/en/full/1582305/trump-pence.jpg?w=95&h=f=aa2c025d06da441a82387c13a24756c7"
+                       src="https://d.newsweek.com/en/full/1582305/trump-pence.jpg?w=95&h=f=aa2c025d06da441a82387c13a24756c7"
+                       title="Trump"/>
+                  <div class="info pl-2 pl-md-4">
+                    <a class="text-dark font-weight-bold"
+                         href="#">Trump's Right. The WHO Is Not Fit for Purpose</a>
+                  </div>
+                </div>
+                <div class="double-line-design border-bottom mt-4"></div>
+                <div class="double-line-design  border-bottom mb-2 pb-2"></div>
+                <div class="byline d-flex justify-content-between">
+                  <div class="f1 text-muted">
+                    <span>By</span> <a class="author-name text-dark font-weight-bolder" href="#" rel="author">Nigel Farage</a>
+                  </div>
+                  <img alt="Trump"
+                     class="lazyloaded debator-img"
+                     data-src="https://d.newsweek.com/en/full/1563625/nigel-farage.png?w=150&h=150&f=2ae37ecc11a3397b627c243707faa3cb"
+                     src="https://d.newsweek.com/en/full/1563625/nigel-farage.png?w=150&h=150&f=2ae37ecc11a3397b627c243707faa3cb"
+                     title="Trump"/>
+                </div>
+                </div>
+              </div>
+              <div class="dvs text-white">
+                VS
+              </div>
+              <div class="col-12">
+                <div class="position-relative debate-wrap">
+                <div class="debate-2 d-flex align-items-center">
+                  <img alt="Joe Biden and Bernie Sanders"
+                       class="opinion-img"
+                       data-src="https://d.newsweek.com/en/full/1582345/donald-trump.jpg?w=95&h=95&f=e0440aa96094bb88d352743ed52efdc1"
+                       src="https://d.newsweek.com/en/full/1582345/donald-trump.jpg?w=95&h=95&f=e0440aa96094bb88d352743ed52efdc1"
+                       title="Trump"/>
+                  <div class="info pl-2 pl-md-4">
+                    <a class="text-dark font-weight-bold"
+                         href="#">Defunding the WHO Mid-Pandemic Is Lunacy</a>
+                  </div>
+                </div>
+                <div class="double-line-design border-bottom mt-4"></div>
+                <div class="double-line-design  border-bottom mb-2 pb-2"></div>
+                <div class="byline d-flex justify-content-between">
+                <div class="f1 text-muted">
+                  <span>By</span> <a class="author-name text-dark font-weight-bolder"
+                       href="#"
+                       rel="author">Jamie Metzl/a>
+                </div><img alt="Trump"
+                     class="debator-img"
+                     data-src="hhttps://d.newsweek.com/en/full/1582307/jamie-metzl.png?w=150&h=150&f=6bb1bbea6ea4958f2df92e02d62be0b1"
+                     src="https://d.newsweek.com/en/full/1582307/jamie-metzl.png?w=150&h=150&f=6bb1bbea6ea4958f2df92e02d62be0b1"
+                     title="jamie"/>
+                </div>
+                </div>
+              </div>
+            </div>
             <div>
-              <p class="text-uppercase font-weight-bold text-muted heroes-title pt-2">Lastest News</p>
+              <p class="text-uppercase font-weight-bold text-muted heroes-title pt-4">Latest News</p>
               <div class="d-flex border-bottom  ml-0 pl-0 mb-3 op-cont pt-0">
                 <img class="pr-2 mb-2 more-img1"
                   src="https://d.newsweek.com/en/full/1583625/donald-trump-messages-whitmer-inconsistent-danger.jpg?w=95&h=95&l=0&t=0&f=e7f6badaf2f4d2f22b880a019f6ef761"
