max-width decreased

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           </div>
 
           <!---Top STories-->
-          <div class="top-stories col-12 col-md-7 order-first-sm">
+          <div class="top-stories col-12 col-md-7 order-first-md">
             <p class="text-uppercase font-weight-bold text-muted mb-0">top stories</p>
             <div class="card mt-2 border-0">
               <div class="image-wrapper">
@@ -682,7 +682,7 @@
               <img class="mag-poster" src="images/mag-image.jpg" alt="Card image cap">
               <p class="text-bottom m-0 font-weight-bold">MAY 01 ISSUE</p>
             </div>
-            <button type="button" class="btn btn-block btn-secondary text-dark">SEE ALL FEATURES</button>
+            <button type="button" class="btn btn-block btn-secondary text-dark mb-3">SEE ALL FEATURES</button>
           </div>
           <div class="col-12 col-md-6 col-lg-3 cover-image maga-title">
             <div class="mag-wrap"><img class="mag-img" src="images/class.jpg" alt="Card image cap">
