reviewed changes made

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <main class="container-fluid">
       <div class="row bg-white mt-5 justify-content-center">
         <!--STORY SECTION-->
-        <div class="row col-12 col-lg-9">
-          <div class=" featured-stories col-12 col-md-5 p-auto ">
+        <div class="row col-12 col-lg-9 d-flex">
+          <div class=" featured-stories col-12 col-md-5 p-auto">
             <p class="col-12 text-uppercase font-weight-bold text-muted mb-0 p-0">featured stories</p>
             <div class="col-12 card border-0 mb-3 pt-0 px-0">
               <div class="image-wrapper">
@@ -199,7 +199,7 @@
           </div>
 
           <!---Top STories-->
-          <div class="top-stories col-12 col-md-7 order-first-md">
+          <div class="top-stories col-12 col-md-7">
             <p class="text-uppercase font-weight-bold text-muted mb-0">top stories</p>
             <div class="card mt-2 border-0">
               <div class="image-wrapper">
