--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="row bg-white mt-5 justify-content-center">
         <!--STORY SECTION-->
         <div class="row col-12 col-lg-9 d-flex">
-          <div class=" featured-stories col-12 col-md-5 p-auto">
+          <div class=" featured-stories col-12 col-md-5 p-auto order-1 order-md-0">
             <p class="col-12 text-uppercase font-weight-bold text-muted mb-0 p-0">featured stories</p>
             <div class="col-12 card border-0 mb-3 pt-0 px-0">
               <div class="image-wrapper">
