Changes made to Navbar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               class="fas fa-bars text-white font-weight-bold"></i></a>
         </div>
       </div>
-      <div class="container-tank d-flex justify-content-end position-relative"><span class="tank position-absolute"></span></div>
+      
       <nav class="nav navbar d-none d-lg-block d-xl-block border-bottom px-0 flex-nowrap">
         <ul class="nav align-item-center justify-content-center align-content-between d-flex flex-grow-1 p-0 m-0"
           style="color: black;">
@@ -544,7 +544,7 @@
                 <div class="f1 text-muted">
                   <span>By</span> <a class="author-name text-dark font-weight-bolder"
                        href="#"
-                       rel="author">Jamie Metzl/a>
+                       rel="author">Jamie Metzl</a>
                 </div><img alt="Trump"
                      class="debator-img"
                      data-src="hhttps://d.newsweek.com/en/full/1582307/jamie-metzl.png?w=150&h=150&f=6bb1bbea6ea4958f2df92e02d62be0b1"
