Changes add to the footer

--- a/index.html
+++ b/index.html
@@ -1259,7 +1259,7 @@
               <i class="fi-snsuxl-linkedin mr-2"><svg class="fi-padding" role="img" xmlns="http://www.w3.org/2000/svg" width="1000mm" height="1000mm" viewBox="0 0 1000 1000" style="width: 1.33em; height: 1.33em; vertical-align: middle;"><path id="path-7" fill="currentColor" d="M 75 0C 75 0 75 0 75 0C 33 0 0 33 0 75C 0 75 0 925 0 925C 0 967 33 1000 75 1000C 75 1000 925 1000 925 1000C 967 1000 1000 967 1000 925C 1000 925 1000 75 1000 75C 1000 33 967 0 925 0C 925 0 75 0 75 0 M 336 332C 336 332 336 789 336 789C 336 789 211 789 211 789C 211 789 211 332 211 332C 211 332 336 332 336 332M 346 206C 346 206 346 206 346 206C 346 247 313 280 273 280C 233 280 201 247 201 206C 201 166 233 133 273 133C 313 133 346 166 346 206M 834 508C 834 508 834 789 834 789C 834 789 709 789 709 789C 709 789 709 556 709 556C 709 416 543 427 543 556C 543 556 543 789 543 789C 543 789 419 789 419 789C 419 789 419 332 419 332C 419 332 543 332 543 332C 543 332 543 406 543 406C 601 298 834 290 834 508" transform=""></path></svg></i>
             </div>
           </div>
-          <div class="col-12 row mt-3 ml-1">
+          <div class="col-12 row mt-3 ml-0 mr-0">
             <span class=" mr-3 mb-2 font-weight-bold">Editions:</span>
             <ul class="d-flex flex-wrap footer-list p-0 mb-2 list-inline foot-all">
               <li class="border-right px-2 pb-2"><a href="#" class=" footer-link text-muted">U.S. Edition</a></li>
